--- a/figaro-unlock/data/style/content.css
+++ b/figaro-unlock/data/style/content.css
@@ -5,3 +5,7 @@
 a[href$="publicites-sur-le-figarofr.php"] {
     display: none;
 }
+
+[style="text-align: center;max-width: 1000px;min-height: 1px;margin: 10px auto;width: 100%;padding: 10px;position: relative;background-color: #232425;overflow: hidden;"] {
+    display: none;
+}
